[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "htb-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "rich",
    "keyring",
]

[project.scripts]
htb = "htb.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
