[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "htb-flow"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "rich",
    "keyring",
]

[project.scripts]
htb = "htb.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy", "types-requests", "bandit", "pre-commit"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.run]
source = ["htb"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B603", "B607", "B404", "B110"]  # subprocess usage intentional in this CLI tool
