[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "htb-flow"
version = "0.1.3"
description = "A command-line workflow tool for HackTheBox — manage the full machine lifecycle without leaving the terminal."
readme = "README.md"
license = { text = "MIT" }
keywords = ["hackthebox", "htb", "ctf", "security", "pentesting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
requires-python = ">=3.11"
dependencies = [
    "requests",
    "rich",
    "keyring",
]

[project.scripts]
htb = "htb.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy", "types-requests", "bandit", "pre-commit"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.run]
source = ["htb"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B603", "B607", "B404", "B110"]  # subprocess usage intentional in this CLI tool
